# parpl

./: .gitmodules  Cargo.toml  LICENSE  README.md  index.html
.devcontainer/: devcontainer.json  post-create.sh
.github/: dependabot.yml
.github/workflows/: benchmark.yml  ci.yml  cross-platform.yml  fuzz.yml  release.yml
benches/: bench_main.rs
dev/bench/: data.js
docs/: cel-extensions.md
examples/: bench_parse.rs  demo.rs  scheme_lex_benchmark.rs
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: parse_cel.rs  parse_scheme.rs
fuzz/src/: lib.rs  seeds.rs
notes/: macronotes.md
scheme/: Cargo.toml  R7RS-DEVIATIONS.md
scheme/examples/: lex_benchmark.rs
scheme/src/: ast.rs  lex.rs  lib.rs  minireader.rs  parser.rs  reader.rs
scheme/src/lex/: boolean.rs  identifiers.rs  intertoken.rs  mod.rs  numbers.rs  punctuation.rs  strings.rs  tests.rs  utils.rs
specs/: README.md
src/: ast.rs  ast_builder.rs  common.rs  constants.rs  context.rs  error.rs  grammar.pest  interner.rs  lib.rs  literal.rs  parser.rs  pretty.rs  test_util.rs
src/cel/: ast.rs  ast_builder.rs  builder.rs  constants.rs  context.rs  error.rs  grammar.pest  literal.rs  mod.rs  parser.rs  pretty.rs  test_util.rs  traits.rs
src/cel/reference/: arena.rs  mini.rs  mod.rs
src/cel/samples/: cel.rs  minicel.rs  mod.rs
src/scheme/: LEXER-DESIGN-NOTES.md  ast.rs  constants.rs  context.rs  datumtraits.rs  minireader.rs  mod.rs  primitivenumbers.rs  reader.rs  samplescheme.rs  traits.rs
src/scheme/lex/: boolean.rs  identifiers.rs  intertoken.rs  mod.rs  numbers.rs  punctuation.rs  strings.rs  tests.rs  utils.rs
src/scheme/reference/: arena.rs  mini.rs  mod.rs  numbers.rs
src/scheme/samples/: minischeme.rs  mod.rs  scheme.rs
tests/: cel_integration.rs  stack_depth_test.rs  version_sync_test.rs
