[package]
name = "parpl"
version = "0.1.0"
edition = "2024"
description = "Programming language parsers (CEL and Scheme R7RS)"
license = "MIT"
keywords = ["parser", "scheme", "R7RS", "cel", "language", "grammar"]
categories = ["parsing", "compilers"]

[features]
default = ["cel", "scheme"]
cel = ["dep:pest", "dep:pest_derive"]
scheme = ["dep:winnow", "dep:unicase", "dep:thiserror"]
samples = []

[dependencies]
winnow = { version = "0.7.14", optional = true }
unicase = { version = "2", optional = true }
thiserror = { version = "1", optional = true }
pest = { version = "2.8", optional = true }
pest_derive = { version = "2.8", optional = true }
bumpalo = "3.19"
string-interner = "0.17"

[[example]]
name = "scheme_lex_benchmark"
required-features = ["scheme"]

[[example]]
name = "demo"
required-features = ["samples"]

[[example]]
name = "bench_parse"
required-features = ["samples"]

[lints.clippy]
unwrap_used = "warn"
uninlined_format_args = "warn"
unnecessary_to_owned = "warn"
manual_assert = "warn"
allow_attributes = "warn"
redundant_clone = "warn" # in nursery
index_refutable_slice = "warn"
clone_on_ref_ptr = "warn"
indexing_slicing = "warn"
string_slice = "warn"

[profile.release]
# Optimize for size
opt-level = "z"     # Optimize for size instead of speed
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce parallel code generation
strip = true        # Remove debug symbols

