[package]
name = "parpl"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
description = "Programming language parsers (CEL and Scheme R7RS)"
authors = ["Eugene Talagrand"]
license = "MIT"
keywords = ["parser", "scheme", "cel", "lexer", "grammar"]
repository = "https://github.com/talagrand/parpl"
categories = ["parsing", "compilers"]

[features]
default = ["cel", "scheme"]
cel = ["dep:pest", "dep:pest_derive"]
scheme = ["dep:winnow", "dep:unicase", "dep:thiserror"]
samples = ["cel", "scheme"]

[dependencies]
winnow = { version = "0.7.14", optional = true }
unicase = { version = "2", optional = true }
thiserror = { version = "1", optional = true }
pest = { version = "2.8", optional = true }
pest_derive = { version = "2.8", optional = true }
bumpalo = "3.19"
string-interner = "0.19"

[[test]]
name = "stack_depth_test"
required-features = ["samples"]

[[example]]
name = "scheme_lex_benchmark"
required-features = ["scheme"]

[[example]]
name = "demo"
required-features = ["samples"]

[[example]]
name = "bench_parse"
required-features = ["samples"]

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "bench_main"
harness = false
required-features = ["samples"]

[lints.clippy]
unwrap_used = "warn"
uninlined_format_args = "warn"
unnecessary_to_owned = "warn"
manual_assert = "warn"
allow_attributes = "warn"
redundant_clone = "warn" # in nursery
index_refutable_slice = "warn"
clone_on_ref_ptr = "warn"
indexing_slicing = "warn"
string_slice = "warn"

[package.metadata.docs.rs]
all-features = true

[profile.release]
# Optimize for size
opt-level = "z"     # Optimize for size instead of speed
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce parallel code generation
strip = true        # Remove debug symbols

